# gyontatas

./: Makefile  README.md  SPECIFICATION.md  docker-compose.yml  env-example
.github/workflows/: deploy.yml
apps/managementtool/: Dockerfile  manage.py  pyproject.toml  seed.yml
apps/managementtool/core/: admin.py  models.py  serializers.py  urls.py
apps/managementtool/core/migrations/: 0001_initial.py
apps/managementtool/core/processors/: base.py  factory.py  type1.py  type2.py
apps/managementtool/core/repositories/: device_repository.py  device_update_repository.py  location_repository.py  miserend_repository.py  sim_card_repository.py
apps/managementtool/core/services/: device_service.py  device_update_service.py  location_service.py  miserend_service.py
apps/managementtool/core/views/: updates.py
apps/managementtool/managementtool/: admin.py  apps.py  coap_diagnostics.py  models.py  serializers.py  settings.py  urls.py  wsgi.py
apps/managementtool/managementtool/migrations/: 0001_initial.py  0002_rename_core_content_types.py  0003_simcard_1nce_fields.py
apps/managementtool/managementtool/processors/: factory.py  type1.py  type2.py
apps/managementtool/managementtool/repositories/: device_repository.py  device_update_repository.py  location_repository.py  one_nce_repository.py  sim_card_repository.py
apps/managementtool/managementtool/services/: device_service.py  device_update_service.py  location_service.py  miserend_service.py  one_nce_service.py
apps/managementtool/managementtool/views/: coap_diagnostics.py  root.py  updates.py
(+15 files in other folders)
